Minor fix to the height of the panelCollapsible header, as it was overlapping with the image

--- a/icefaces/trunk/icefaces/samples/component-showcase/web/css/showcase_style.css
+++ b/icefaces/trunk/icefaces/samples/component-showcase/web/css/showcase_style.css
@@ -1185,6 +1185,7 @@ em {
     .pnlClpsblDemoColpsdHdr div, .pnlClpsblDemoColpsdHdr-dis div{
     background-repeat: no-repeat;
     background-position: left top;
+    height: 17px;
 }
 .pnlClpsblDemoHdr div, .pnlClpsblDemoHdr-dis div{
     background-image: url( "../images/panelCollapsible/arrowDown.gif" );
